# chainge-manifest-examples

./: Cargo.toml  dump_examples.sh  rustfmt.toml
manifests/: burn-token.rtm  create-token.rtm  mint-token.rtm
src/: burn_token.rs  create_token.rs  lib.rs  mint_token.rs
