[package]
name = "resource-creator"
version = "1.0.0"
edition = "2021"

[dependencies]
radix-transactions = "1.2.0"
scrypto = { version = "1.2.0" }
scrypto-test = { version = "1.2.0" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "create-token"
path = "src/create_token.rs"

[[bin]]
name = "mint-token"
path = "src/mint_token.rs"

[[bin]]
name = "burn-token"
path = "src/burn_token.rs"
